--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -290,7 +290,7 @@ font_size 13.0
 
 #: The thickness of the underline cursor (in pts).
 
-cursor_blink_interval 1
+cursor_blink_interval 0.5
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -1175,7 +1175,7 @@ background_blur 6
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE.
 
-# background_image none
+# background_image /Users/serikbukenov/Downloads/bg3.png
 
 #: Path to a background image. Must be in PNG format.
 
@@ -1198,7 +1198,7 @@ background_blur 6
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-# background_tint 0.0
+background_tint 0.9
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
