--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,3 +39,5 @@ set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/default/cyan'
 
 run '~/.tmux/plugins/tpm/tpm'
+set-option -g status-right ''
+set-option -g status-left ''
