Navigate horizontally through typed text

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1894,6 +1894,10 @@ macos_option_as_alt yes
 
 #: Scrolling {{{
 
+#: Scroll words
+map alt+h send_text all \x1b\x62
+map alt+l send_text all \x1b\x66
+
 #: Scroll line up
 
 # map kitty_mod+up    scroll_line_up
@@ -2514,3 +2518,4 @@ macos_option_as_alt yes
 # Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
